# django-template

./: .env.example  .gitignore  README.md  pyproject.toml
apps/backoffice/: apps.py  middleware.py  urls.py
apps/users/models/: __init__.py  user.py
config/: asgi.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
