[project]
name = "project"
version = "0.1.0"
description = "Django project template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-environ>=0.12.0",
    "psycopg[binary]>=3.2",
    "django-allauth[socialaccount]>=65.0",
    "django-anymail[postmark]>=11.0",
    "sentry-sdk>=2.0",
    "argon2-cffi>=23.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "django-debug-toolbar>=4.4",
    "django-extensions>=3.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F401", "F403", "F405"]
